--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,27 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title class="title-header">Home</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+  <br>
+  <h2 class="title-header">Olá Tiago</h2>
+  <br>
+  <p class="text-paragraf">
+    Com nosso app você pode consultar informações em tempo real na palma de sua mão.
   </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
+  <p class="text-paragraf">
+    Utilize no IOs ou Android =)
   </p>
+  <br>
+  <div class="logo">
+    <img class="img-slide" alt="" src="assets/imgs/logo-nfsd.png">
+  </div>
+  <br>
+  <hr>
+  <br>
+  <div class="intro-image">
+    <img class="img-slide" alt="" src="assets/imgs/mobile.png">
+  </div>
 </ion-content>
